// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render with nodes and edges 1`] = `
<div
  id="petc-kanvas"
  onClick={[Function]}
>
  <div
    id="node-a-wrapper"
    style={
      Object {
        "left": 100,
        "position": "absolute",
        "top": 200,
      }
    }
  >
    <div
      className="petc-node"
      id="node-a"
      onClick={[Function]}
      style={undefined}
    />
    <div
      className="petc-node-label"
      style={
        Object {
          "WebkitTransform": "rotate(-4deg)",
        }
      }
    />
  </div>
  <div
    id="node-b-wrapper"
    style={
      Object {
        "left": 200,
        "position": "absolute",
        "top": 100,
      }
    }
  >
    <div
      className="petc-node"
      id="node-b"
      onClick={[Function]}
      style={undefined}
    />
    <div
      className="petc-node-label"
      style={
        Object {
          "WebkitTransform": "rotate(-4deg)",
        }
      }
    />
  </div>
  <div
    id="a-b"
  />
</div>
`;

exports[`render with nodes and edges with classes 1`] = `
<div
  id="petc-kanvas"
  onClick={[Function]}
>
  <div
    id="node-a-wrapper"
    style={
      Object {
        "left": 100,
        "position": "absolute",
        "top": 200,
      }
    }
  >
    <div
      className="petc-node classA"
      id="node-a"
      onClick={[Function]}
      style={
        Object {
          "color": "red",
        }
      }
    />
    <div
      className="petc-node-label"
      style={
        Object {
          "WebkitTransform": "rotate(-4deg)",
        }
      }
    />
  </div>
  <div
    id="node-b-wrapper"
    style={
      Object {
        "left": 200,
        "position": "absolute",
        "top": 100,
      }
    }
  >
    <div
      className="petc-node classB"
      id="node-b"
      onClick={[Function]}
      style={
        Object {
          "color": "blue",
        }
      }
    />
    <div
      className="petc-node-label"
      style={
        Object {
          "WebkitTransform": "rotate(-4deg)",
        }
      }
    />
  </div>
  <div
    id="a-b"
  />
</div>
`;

exports[`renders initial doc 1`] = `
<div
  id="petc-kanvas"
  onClick={[Function]}
/>
`;

exports[`should show node label 1`] = `
<div
  id="petc-kanvas"
  onClick={[Function]}
>
  <div
    id="node-wrapper"
    style={
      Object {
        "left": 100,
        "position": "absolute",
        "top": 100,
      }
    }
  >
    <div
      className="petc-node"
      id="node"
      onClick={[Function]}
      style={undefined}
    />
    <div
      className="petc-node-label"
      style={
        Object {
          "WebkitTransform": "rotate(-4deg)",
        }
      }
    >
      a label
    </div>
  </div>
</div>
`;
